# BookingSyncApi

./: .gitignore  2209_IMPORT_MIE.csv  api.py  block_rentals.py  bsync.py  close_conversations.py  creds.json  desc_backup.xlsx  export.csv  export.py  export_fees.py  export_rentals_with_amenity.py  export_vat_fees.py  import.py  import_POZ-1.csv  import_WAW-1.csv  import_WAW-3.csv  import_status.csv  import_status_WAW-1.csv  import_status_WAW_WRO_POZ.csv  inbox.py  inbox_export.py  pay.py  payments_test.py  refresh_token.txt  rentals.xlsx  rentals_export_w_fee.xlsx  rentals_w_am.xlsx  setup.cfg  special_offers.py  test.py  update_descriptions.py
.github/workflows/: black.yml
blocking-scripts/: block_GDA.py  block_POZ.py  block_at_14.py  block_at_18.py  block_at_19.py  block_emergency.py  block_rentals.py
bulkChanges/: amenities.py  downpayment.xlsx  export.csv  export_mid_term.py  fees.py  fees.xlsx  mid_term_map.py  mid_term_sheet.xlsx  multiple_rules.py  rates.py  rates_update.xlsx  rules.xlsx  rules_update.xlsx  set_downpayment.py
data/: accounts.json  amenities.json  bookings.json  clients.json  hosts.json  rentals.json  sources.json
examples/: bookings_with_tags.py  close_conversations.py  dates.py  description_replace.py  description_replace_per_city.py  export.py  export_fees.py  export_rentals_with_amenity.py  export_vat_fees.py  import.py  inbox_export.py  payments_test.py  special_offers.py  swap_rates_tables.py  test.py  update_descriptions.py
examples/bulkChanges/: amenities.py  change_fees.py  fees.py  (+6 more)
tools/: cmd_authorization.py  cmd_export.py
(+19 files in other folders)
