[metadata]
name = BookingSyncAPI
version = 0.0.1
author = Adam Szałowski
author_email = adamszalowski99@gmail.com 
description = BookingSync API wrapper for usage in python projects
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
install_requires = requests
python_requires = >=3.6
