[metadata]
name = bookingsyncapi
version = 0.0.2
author = Adam Szałowski
author_email = adamszalowski99@gmail.com 
description = BookingSync API wrapper for usage in python projects
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = bookingsyncapi
install_requires = 
        requests
        python-dotenv
        pyyaml
python_requires = >=3.6
package_dir = =src
